@@ -375,17 +375,6 @@ AS_IF([test "x$jedecexp" = xtrue], [
   AM_CONDITIONAL(JEDEC_EXP, false)
 ])
 
-dnl Enable a relocatable jtag?
-AC_ARG_ENABLE(relocatable,
-[AS_HELP_STRING([--enable-relocatable], [Enable relocatable paths])],
-[relocatable=$enableval], [relocatable=no])
-AS_IF([test "x$relocatable" = xyes], [
-  AM_CONDITIONAL(JTAG_RELOCATABLE, true)
-  AC_DEFINE(JTAG_RELOCATABLE, 1, [define for relocatable paths])
-],[
-  AM_CONDITIONAL(JTAG_RELOCATABLE, false)
-])
-
 
 # Macro for driver include check
 AC_DEFUN([CHECK_DRIVER], [
@@ -540,6 +529,17 @@ CHECK_DRIVER([$parportdrivers], [enabled_parport_drivers], [ftdi],   [ENABLE_PAR
 CHECK_DRIVER([$parportdrivers], [enabled_parport_drivers], [ppdev],  [ENABLE_PARPORT_PPDEV])
 CHECK_DRIVER([$parportdrivers], [enabled_parport_drivers], [ppi],    [ENABLE_PARPORT_PPI])
 
+
+dnl Enable a relocatable jtag?
+AC_ARG_ENABLE(relocatable,
+[AS_HELP_STRING([--enable-relocatable], [Enable relocatable paths])],
+[relocatable=$enableval], [relocatable=no])
+AS_IF([test "x$relocatable" = xyes], [
+  AM_CONDITIONAL(JTAG_RELOCATABLE, true)
+  AC_DEFINE(JTAG_RELOCATABLE, 1, [define for relocatable paths])
+],[
+  AM_CONDITIONAL(JTAG_RELOCATABLE, false)
+])
 
 AC_OUTPUT
 
