@@ -52,7 +52,7 @@ lbasename (const char *name)
 
 #if defined (HAVE_DOS_BASED_FILE_SYSTEM)
   /* Skip over a possible disk name.  */
-  if (ISALPHA (name[0]) && name[1] == ':') 
+  if (ISALPHA (name[0]) && name[1] == ':')
     name += 2;
 #endif
 
