@@ -65,7 +65,7 @@ extern char *canonicalize_file_name (const char *);
 #  endif
 # endif
 #else
-  /* cygwin has realpath, so it won't get here.  */ 
+  /* cygwin has realpath, so it won't get here.  */
 # if defined (_WIN32)
 #  define WIN32_LEAN_AND_MEAN
 #  include <windows.h> /* for GetFullPathName */
